@@ -4,4 +4,5 @@
 3. Reduced swappiness.
 4. Added bunch of advanced TCP Congestion Controls.
 5. Optimized SLUB.
-6. Asynchronous I/O latency to a solid-state disk greatly increased 
+6. Asynchronous I/O latency to a solid-state disk greatly increased .
+7. NOATIME and NODIRATIME by default.
